--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,32 @@
 {
-    "ros.distro": "humble"
+    "python.autoComplete.extraPaths": [
+        "/home/ubuntu/ros2_ws/install/subscriber_pkg/lib/python3.10/site-packages",
+        "/home/ubuntu/ros2_ws/install/subpub_pkg/lib/python3.10/site-packages",
+        "/home/ubuntu/ros2_ws/install/publisher_pkg/lib/python3.10/site-packages",
+        "/home/ubuntu/ros2_ws/install/patrol_pkg/lib/python3.10/site-packages",
+        "/home/ubuntu/ros2_ws/install/lidar_pkg/lib/python3.10/site-packages",
+        "/home/ubuntu/turtlebot3_ws/build/turtlebot3_teleop",
+        "/home/ubuntu/turtlebot3_ws/install/turtlebot3_teleop/lib/python3.10/site-packages",
+        "/home/ubuntu/turtlebot3_ws/build/turtlebot3_example",
+        "/home/ubuntu/turtlebot3_ws/install/turtlebot3_example/lib/python3.10/site-packages",
+        "/home/ubuntu/turtlebot3_ws/install/turtlebot3_msgs/local/lib/python3.10/dist-packages",
+        "/home/ubuntu/turtlebot3_ws/install/dynamixel_sdk_custom_interfaces/local/lib/python3.10/dist-packages",
+        "/opt/ros/humble/lib/python3.10/site-packages",
+        "/opt/ros/humble/local/lib/python3.10/dist-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/ubuntu/ros2_ws/install/subscriber_pkg/lib/python3.10/site-packages",
+        "/home/ubuntu/ros2_ws/install/subpub_pkg/lib/python3.10/site-packages",
+        "/home/ubuntu/ros2_ws/install/publisher_pkg/lib/python3.10/site-packages",
+        "/home/ubuntu/ros2_ws/install/patrol_pkg/lib/python3.10/site-packages",
+        "/home/ubuntu/ros2_ws/install/lidar_pkg/lib/python3.10/site-packages",
+        "/home/ubuntu/turtlebot3_ws/build/turtlebot3_teleop",
+        "/home/ubuntu/turtlebot3_ws/install/turtlebot3_teleop/lib/python3.10/site-packages",
+        "/home/ubuntu/turtlebot3_ws/build/turtlebot3_example",
+        "/home/ubuntu/turtlebot3_ws/install/turtlebot3_example/lib/python3.10/site-packages",
+        "/home/ubuntu/turtlebot3_ws/install/turtlebot3_msgs/local/lib/python3.10/dist-packages",
+        "/home/ubuntu/turtlebot3_ws/install/dynamixel_sdk_custom_interfaces/local/lib/python3.10/dist-packages",
+        "/opt/ros/humble/lib/python3.10/site-packages",
+        "/opt/ros/humble/local/lib/python3.10/dist-packages"
+    ]
 }
